# AURO

./: README.md  rcutil.py
.devcontainer/: devcontainer.json
.devcontainer/other/: devcontainer.json
.devcontainer/vslam-other/: devcontainer.json
.devcontainer/vslam-vnc/: devcontainer.json
.devcontainer/vslam-wsl/: devcontainer.json
.devcontainer/wsl/: devcontainer.json
assessment/: CMakeLists.txt  README.md  package.xml  setup.py
assessment/assessment/: barrel_manager.py  dynamic_mask.py
assessment/config/: initial_poses.yaml  turtlebot3_lds_2d.lua
assessment/launch/: assessment.launch.py  cartographer.launch.py  rviz.launch.py  spawn_robot.launch.py
assessment/models/barrel/: model.sdf
assessment/models/materials/: assessment_materials.material
assessment/models/meshes/: barrel_visual.stl  building.stl  decontamination_zone.stl  obstacle.stl  shower.stl  storage_zone.stl
assessment/models/waffle_pi/: model.sdf
assessment/params/: nav2_params_namespaced.yaml
assessment/rviz/: namespaced.rviz  namespaced_cartographer.rviz  namespaced_nav2.rviz
assessment/src/: visual_sensor.cpp
assessment/worlds/: assessment.world
assessment_interfaces/: CMakeLists.txt  package.xml
assessment_interfaces/msg/: Barrel.msg  BarrelHolder.msg  BarrelHolders.msg  BarrelList.msg  BarrelLog.msg  Radiation.msg  RadiationList.msg  Zone.msg
auro_interfaces/: CMakeLists.txt  package.xml
auro_interfaces/msg/: Obstacle.msg
auro_interfaces/srv/: ItemRequest.srv
gazebo_ros_link_attacher/: CMakeLists.txt  README.md  package.xml
gazebo_ros_link_attacher/include/gazebo_ros_link_attacher/: gazebo_ros_link_attacher.hpp
gazebo_ros_link_attacher/launch/: test_attacher.launch.py
gazebo_ros_link_attacher/scripts/: attach.py  demo.py  demo_multiple.py  detach.py  spawn_models.py
gazebo_ros_link_attacher/src/: gazebo_ros_link_attacher.cpp
gazebo_ros_link_attacher/worlds/: test_attacher.world
my_package/: package.xml  setup.py
planar_fk_euler/: package.xml  setup.cfg  setup.py
planar_fk_euler/planar_fk_euler/: planar_fk_euler.py
solution/launch/: solution_launch.py
solution/solution/: data_logger.py  robot_controller.py
week_2/launch/: gz_fortress.launch.py
week_3/: setup.py
week_3/config/: joints_controller.yaml
week_3/launch/: actuated.launch.py
week_3/models/arm/: model.config  model.urdf
week_3/rviz/: arm_with_pose.rviz
week_3/week_3/: planar_fk_euler.py
week_4/: package.xml  setup.py
week_4/launch/: task10.launch.py  task12.launch.py  task3.launch.py  task4.launch.py  task5.launch.py  task6.launch.py  task9.launch.py
week_4/robochart/turtlebot-robochart-obs-detect/: .project  obstacle.rct  representations.aird
week_4/robochart/week_4_task1/: .project  main.rct  representations.aird
week_4/week_4/: robochart_fsm.py  robochart_fsm2.py  robochart_sequence_toolkit.py  robochart_set_toolkit.py  sample_driving_machine.py  sample_forward_machine.py  sample_forward_turning.py  week_4.py  week_4_task3_TurtleBot3FSMC.py  week_4_task4_DetectorFSM.py  week_4_task4_TurtleBot3FSMC.py  week_4_task5_TurtleBot3FSMC.py  week_4_task6_TurtleBot3FSMC.py  week_4_task7_PrioritisedNode.py
week_5/: package.xml  setup.py
week_5/argos/: flocking_10.argos  ros_1.argos  ros_10.argos
week_5/config/: initial_poses.yaml
week_5/launch/: cloned_multi_tb3_simulation.launch.py  rviz.launch.py  spawn_robot.launch.py  week_5.launch.py
week_5/week_5/: barrel_manager.py
week_5/worlds/: week_5.world
week_6/: package.xml  setup.py
week_6/launch/: week_6.launch.py
week_6/rviz/: namespaced.rviz  namespaced_odom.rviz
week_6/week_6/: path_publisher.py  task7_data_collector.py  task8_plot_data.py  task9_fit_data.py  week_6.py
week_7/: setup.py
week_7/config/: initial_poses.yaml
week_7/launch/: cartographer.launch.py  navigation2.launch.py  turtlebot3_world_auro.launch.py  week_7.launch.py
week_7/maps/: README.md  task2.pgm  task2.yaml  task5.pgm  task5.yaml
week_7/rviz/: tb3_navigation2.rviz
week_8/: setup.py
week_8/rviz/: nav2_custom_goal.rviz
week_8/week_8/: robot_controller.py  set_init_pose.py  task2.py  task3.py  task4.py  task5.py  task8.py
week_9/: camera.yaml  config.yaml
(+27 files in other folders)
