<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros_link_attacher</name>
  <version>0.1.0</version>
  <description>ROS2 package for attaching and detaching links in Gazebo simulation. Based on https://github.com/pal-robotics/gazebo_ros_link_attacher.</description>
  <maintainer email="pedro.ribeiro@york.ac.uk">Pedro Ribeiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>